--- a/far-away-travel-list/src/index.css
+++ b/far-away-travel-list/src/index.css
@@ -1,10 +1,3 @@
-/* 
-const initialItems = [
-  { id: 1, description: "Passports", quantity: 2, packed: false },
-  { id: 2, description: "Socks", quantity: 12, packed: false },
-];
-*/
-
 @import url("https://fonts.googleapis.com/css2?family=Monoton&family=Quicksand:wght@500;700&display=swap");
 
 * {
@@ -89,6 +82,20 @@ input {
   align-items: center;
 }
 
+.list ul {
+  list-style: none;
+  width: 80%;
+  /* overflow: scroll; */
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 1.2rem;
+  justify-content: center;
+  align-content: start;
+}
+
+
+/* 
 .actions button,
 .list select {
   text-transform: uppercase;
@@ -98,17 +105,6 @@ input {
   margin: 0 0.8rem;
 }
 
-.list ul {
-  list-style: none;
-  width: 80%;
-  overflow: scroll;
-
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 1.2rem;
-  justify-content: center;
-  align-content: start;
-}
 
 .list li {
   display: flex;
@@ -136,4 +132,4 @@ input[type="checkbox"] {
   text-align: center;
   font-weight: 700;
   padding: 3.2rem 0;
-}
+} */
