--- a/far-away-travel-list/src/index.css
+++ b/far-away-travel-list/src/index.css
@@ -70,6 +70,11 @@ input {
   background-color: #76c7ad;
 }
 
+.quantity{
+  color: #76c7ad;
+  font-weight: bolder;
+  font-size: 28px;
+}
 .list {
   background-color: #5a3e2b;
   color: #ffebb3;
@@ -102,7 +107,7 @@ input {
   padding: 0.8rem 2.4rem;
   font-size: 1.4rem;
   font-weight: 700;
-  margin: 0 0.8rem;
+  margin: 0 1.8rem;
 }
 
 
