--- a/15-world-wise-using-vite/src/components/CityItem.module.css
+++ b/15-world-wise-using-vite/src/components/CityItem.module.css
@@ -2,18 +2,19 @@
 .cityItem:link,
 .cityItem:visited {
   display: flex;
-  gap: 1.6rem;
+  gap: 1.2rem;
   align-items: center;
-
   background-color: var(--color-dark--2);
   border-radius: 7px;
   padding: 1rem 2rem;
   border-left: 5px solid var(--color-brand--2);
   cursor: pointer;
-
   color: inherit;
   text-decoration: none;
+  overflow: hidden;
 }
+
+
 
 .cityItem--active {
   border: 2px solid var(--color-brand--2);
